--- a/Losses.yml
+++ b/Losses.yml
@@ -6,6 +6,7 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - alsa-lib=1.2.12=h4ab18f5_0
+  - asttokens=2.4.1=pyhd8ed1ab_0
   - attr=2.5.1=h166bdaf_1
   - brotli=1.1.0=hd590300_1
   - brotli-bin=1.1.0=hd590300_1
@@ -13,9 +14,14 @@ dependencies:
   - ca-certificates=2024.7.4=hbcca054_0
   - cairo=1.18.0=hbb29018_2
   - certifi=2024.7.4=pyhd8ed1ab_0
+  - comm=0.2.2=pyhd8ed1ab_0
   - contourpy=1.2.1=py312h8572e83_0
   - cycler=0.12.1=pyhd8ed1ab_0
   - dbus=1.13.6=h5008d03_3
+  - debugpy=1.8.2=py312h7070661_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - exceptiongroup=1.2.0=pyhd8ed1ab_2
+  - executing=2.0.1=pyhd8ed1ab_0
   - expat=2.6.2=h59595ed_0
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
@@ -35,6 +41,13 @@ dependencies:
   - gstreamer=1.24.5=haf2f30d_0
   - harfbuzz=8.5.0=hfac3d4d_0
   - icu=73.2=h59595ed_0
+  - importlib-metadata=8.0.0=pyha770c72_0
+  - importlib_metadata=8.0.0=hd8ed1ab_0
+  - ipykernel=6.29.5=pyh3099207_0
+  - ipython=8.26.0=pyh707e725_0
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - jupyter_client=8.6.2=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=py312h7900ff3_0
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.5=py312h8572e83_1
   - krb5=1.21.3=h659f571_0
@@ -80,6 +93,7 @@ dependencies:
   - libpng=1.6.43=h2797004_0
   - libpq=16.3=ha72fbe1_0
   - libsndfile=1.2.2=hc60ed4a_1
+  - libsodium=1.0.18=h36c2ea0_1
   - libsqlite=3.46.0=hde9e2c9_0
   - libstdcxx-ng=14.1.0=hc0a3c3a_0
   - libsystemd0=255=h3516f8a_1
@@ -95,40 +109,56 @@ dependencies:
   - lz4-c=1.9.4=hcb278e6_0
   - matplotlib=3.8.4=py312h7900ff3_2
   - matplotlib-base=3.8.4=py312h20ab3a6_2
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
   - mpg123=1.32.6=h59595ed_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - mysql-common=8.3.0=hf1915f5_4
   - mysql-libs=8.3.0=hca2cd23_4
   - ncurses=6.5=h59595ed_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
   - nspr=4.35=h27087fc_0
   - nss=3.102=h593d115_0
   - numpy=2.0.0=py312h22e1c76_0
   - openjpeg=2.5.2=h488ebb8_0
   - openssl=3.3.1=h4ab18f5_1
   - packaging=24.1=pyhd8ed1ab_0
+  - parso=0.8.4=pyhd8ed1ab_0
   - pcre2=10.44=h0f59acf_0
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
   - pillow=10.4.0=py312h287a98d_0
   - pip=24.0=pyhd8ed1ab_0
   - pixman=0.43.2=h59595ed_0
+  - platformdirs=4.2.2=pyhd8ed1ab_0
   - ply=3.11=pyhd8ed1ab_2
+  - prompt-toolkit=3.0.47=pyha770c72_0
+  - psutil=6.0.0=py312h9a8786e_0
   - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
   - pulseaudio-client=17.0=hb77b528_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pygments=2.18.0=pyhd8ed1ab_0
   - pyparsing=3.1.2=pyhd8ed1ab_0
   - pyqt=5.15.9=py312h949fe66_5
   - pyqt5-sip=12.12.2=py312h30efb56_5
   - python=3.12.4=h194c7f8_0_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
   - python_abi=3.12=4_cp312
+  - pyzmq=26.0.3=py312h8fd38d8_0
   - qt-main=5.15.8=ha2b5568_22
   - readline=8.2=h8228510_1
   - setuptools=70.1.1=pyhd8ed1ab_0
   - sip=6.7.12=py312h30efb56_0
   - six=1.16.0=pyh6c4a22f_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
   - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
   - tornado=6.4.1=py312h9a8786e_0
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
   - tzdata=2024a=h0c530f3_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
   - wheel=0.43.0=pyhd8ed1ab_1
   - xcb-util=0.4.1=hb711507_2
   - xcb-util-image=0.4.0=hb711507_2
@@ -149,6 +179,8 @@ dependencies:
   - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
   - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.6=h166bdaf_0
+  - zeromq=4.3.5=h75354e8_4
+  - zipp=3.19.2=pyhd8ed1ab_0
   - zlib=1.3.1=h4ab18f5_1
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
@@ -170,9 +202,11 @@ dependencies:
       - nvidia-nccl-cu12==2.20.5
       - nvidia-nvjitlink-cu12==12.5.82
       - nvidia-nvtx-cu12==12.1.105
+      - python-graphviz==0.20.3
       - sympy==1.13.0
       - torch==2.3.1
+      - torch-summary==1.4.5
       - torchaudio==2.3.1
       - torchvision==0.18.1
-      - typing-extensions==4.12.2
-prefix: /home/pdi_4/anaconda3/envs/Losses
+      - torchviz==0.0.2
+prefix: /home/gusanagy/anaconda3/envs/Losses
