--- a/Losses.yml
+++ b/Losses.yml
@@ -6,17 +6,23 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - alsa-lib=1.2.12=h4ab18f5_0
+  - aom=3.9.1=hac33072_0
   - asttokens=2.4.1=pyhd8ed1ab_0
   - attr=2.5.1=h166bdaf_1
+  - blosc=1.21.6=hef167b5_0
   - brotli=1.1.0=hd590300_1
   - brotli-bin=1.1.0=hd590300_1
+  - brunsli=0.1=h2531618_0
   - bzip2=1.0.8=hd590300_5
+  - c-blosc2=2.15.0=h6d6b9e4_1
   - ca-certificates=2024.7.4=hbcca054_0
   - cairo=1.18.0=hbb29018_2
-  - certifi=2024.7.4=pyhd8ed1ab_0
+  - certifi=2024.7.4=py312h06a4308_0
+  - charls=2.4.2=h59595ed_0
   - comm=0.2.2=pyhd8ed1ab_0
   - contourpy=1.2.1=py312h8572e83_0
   - cycler=0.12.1=pyhd8ed1ab_0
+  - dav1d=1.2.1=h5eee18b_0
   - dbus=1.13.6=h5008d03_3
   - debugpy=1.8.2=py312h7070661_0
   - decorator=5.1.1=pyhd8ed1ab_0
@@ -34,6 +40,7 @@ dependencies:
   - freetype=2.12.1=h267a509_2
   - gettext=0.22.5=h59595ed_2
   - gettext-tools=0.22.5=h59595ed_2
+  - giflib=5.2.2=hd590300_0
   - glib=2.80.3=h8a4344b_1
   - glib-tools=2.80.3=h73ef956_1
   - graphite2=1.3.13=h59595ed_1003
@@ -41,6 +48,8 @@ dependencies:
   - gstreamer=1.24.5=haf2f30d_0
   - harfbuzz=8.5.0=hfac3d4d_0
   - icu=73.2=h59595ed_0
+  - imagecodecs=2024.6.1=py312h6b2d42b_2
+  - imageio=2.33.1=py312h06a4308_0
   - importlib-metadata=8.0.0=pyha770c72_0
   - importlib_metadata=8.0.0=hd8ed1ab_0
   - ipykernel=6.29.5=pyh3099207_0
@@ -48,15 +57,19 @@ dependencies:
   - jedi=0.19.1=pyhd8ed1ab_0
   - jupyter_client=8.6.2=pyhd8ed1ab_0
   - jupyter_core=5.7.2=py312h7900ff3_0
+  - jxrlib=1.1=h7b6447c_2
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.5=py312h8572e83_1
   - krb5=1.21.3=h659f571_0
   - lame=3.100=h166bdaf_1003
+  - lazy_loader=0.4=py312h06a4308_0
   - lcms2=2.16=hb7c19ff_0
   - ld_impl_linux-64=2.40=hf3520f5_7
   - lerc=4.0.0=h27087fc_0
+  - libaec=1.1.3=h59595ed_0
   - libasprintf=0.22.5=h661eb56_2
   - libasprintf-devel=0.22.5=h661eb56_2
+  - libavif16=1.1.0=h9b56c87_0
   - libblas=3.9.0=22_linux64_openblas
   - libbrotlicommon=1.1.0=hd590300_1
   - libbrotlidec=1.1.0=hd590300_1
@@ -81,8 +94,10 @@ dependencies:
   - libglib=2.80.3=h8a4344b_1
   - libgomp=14.1.0=h77fa898_0
   - libgpg-error=1.50=h4f305b6_0
+  - libhwy=1.1.0=h00ab1b0_0
   - libiconv=1.17=hd590300_2
   - libjpeg-turbo=3.0.0=hd590300_1
+  - libjxl=0.10.3=h66b40c8_0
   - liblapack=3.9.0=22_linux64_openblas
   - libllvm15=15.0.7=hb3ce162_4
   - libllvm18=18.1.8=hc9dba70_0
@@ -106,6 +121,7 @@ dependencies:
   - libxkbcommon=1.7.0=h2c5496b_1
   - libxml2=2.12.7=hc051c1a_1
   - libzlib=1.3.1=h4ab18f5_1
+  - libzopfli=1.0.3=he6710b0_0
   - lz4-c=1.9.4=hcb278e6_0
   - matplotlib=3.8.4=py312h7900ff3_2
   - matplotlib-base=3.8.4=py312h20ab3a6_2
@@ -116,6 +132,7 @@ dependencies:
   - mysql-libs=8.3.0=hca2cd23_4
   - ncurses=6.5=h59595ed_0
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - networkx=3.3=py312h06a4308_0
   - nspr=4.35=h27087fc_0
   - nss=3.102=h593d115_0
   - numpy=2.0.0=py312h22e1c76_0
@@ -144,13 +161,20 @@ dependencies:
   - python=3.12.4=h194c7f8_0_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
   - python_abi=3.12=4_cp312
+  - pywavelets=1.6.0=py312h085067d_0
   - pyzmq=26.0.3=py312h8fd38d8_0
   - qt-main=5.15.8=ha2b5568_22
+  - rav1e=0.6.6=he8a937b_2
   - readline=8.2=h8228510_1
+  - scikit-image=0.24.0=py312h1d6d2e6_1
+  - scipy=1.14.0=py312hc2bc53b_1
   - setuptools=70.1.1=pyhd8ed1ab_0
   - sip=6.7.12=py312h30efb56_0
   - six=1.16.0=pyh6c4a22f_0
+  - snappy=1.2.1=ha2e4443_0
   - stack_data=0.6.2=pyhd8ed1ab_0
+  - svt-av1=2.1.2=hac33072_0
+  - tifffile=2023.4.12=py312h06a4308_0
   - tk=8.6.13=noxft_h4845f30_101
   - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
@@ -180,8 +204,10 @@ dependencies:
   - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.6=h166bdaf_0
   - zeromq=4.3.5=h75354e8_4
+  - zfp=1.0.1=hac33072_1
   - zipp=3.19.2=pyhd8ed1ab_0
   - zlib=1.3.1=h4ab18f5_1
+  - zlib-ng=2.2.1=he02047a_0
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - filelock==3.15.4
@@ -189,7 +215,6 @@ dependencies:
       - jinja2==3.1.4
       - markupsafe==2.1.5
       - mpmath==1.3.0
-      - networkx==3.3
       - nvidia-cublas-cu12==12.1.3.1
       - nvidia-cuda-cupti-cu12==12.1.105
       - nvidia-cuda-nvrtc-cu12==12.1.105
